# ipcam-view

./: .gitignore  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
mjpeg-view/: CMakeLists.txt  build.gradle
mjpeg-view/src/main/cpp/ImageProc/: ImageProc.c
mjpeg-view/src/main/java/com/github/niqdev/mjpeg/: HeaderExtractor.java  MjpegInputStreamNative.java  MjpegSurfaceView.java  MjpegViewDefault.java  MjpegViewNative.java
mjpeg-view/src/test/java/com/github/niqdev/mjpeg/: ContentLengthHeaderExtractorTest.java
